<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgaddcar"
    tools:context=".AddcarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewusername2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/user"
            android:textColor="#80000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextmarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/addmarca"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/editTextmodelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addmodel"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/editTextprize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addprize"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addphone"
            android:inputType="phone" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:onClick="subirImagen"
            android:text="@string/addphoto"
            android:textColor="#F4F2F1" />


        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="#80000000"
            android:onClick="PublicarCarro"
            android:text="@string/add"
            android:textColor="#F4F2F1" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>