<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    card_view:cardBackgroundColor="@color/colorPrimary"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageViewcar"
            android:layout_width="123dp"
            android:layout_height="125dp"


            card_view:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/textViewmarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/textViewmodelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/textViewprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/textViewpropietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/propietario"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/textViewphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>